--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Letter - Simple Sign Up Form</title>
+	<title>Wahmang's Portofolio</title>
 	<!-- 
 
 Letter Template 
@@ -51,7 +51,7 @@ Template Re-distribution is NOT allowed.
 				</header>
 				<P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P>
 
-				<form action="#" method="get" class="subscribe-form">
+				<!-- <form action="#" method="get" class="subscribe-form">
 					<div class="row form-section">
 
 						<div class="col-md-7 col-sm-7 col-xs-7">
@@ -63,21 +63,15 @@ Template Re-distribution is NOT allowed.
 						</div>
 
 					</div>
-				</form>
+				</form> -->
 
 				<div class="tm-social-icons-container text-xs-center">
-					<a href="#" class="tm-social-link"><i class="fa fa-facebook"></i></a>
-					<a href="#" class="tm-social-link"><i class="fa fa-google-plus"></i></a>
-					<a href="#" class="tm-social-link"><i class="fa fa-twitter"></i></a>
-					<a href="#" class="tm-social-link"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.facebook.com/AdiWiraAstina" class="tm-social-link"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.instagram.com/wahmang_/" class="tm-social-link"><i class="fa fa-instagram"></i></a>
+					<a href="https://www.linkedin.com/in/wahmang/" class="tm-social-link"><i class="fa fa-linkedin"></i></a>
 				</div>
 
 			</div>
-		</div>
-		<div class="footer-link">
-			<p>Copyright © 2020 Your Company
-
-				- Design: TemplateMo</p>
 		</div>
 	</div>
 </body>
