--- a/index.html
+++ b/index.html
@@ -43,32 +43,37 @@ Template Re-distribution is NOT allowed.
 		<li></li>
 	</ul>
 
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row cb-slideshow-text-container ">
-			<div class="tm-content col-xl-6 col-sm-8 col-xs-8 ml-auto section">
+			<div class="tm-content col-xl-5 col-sm-12 col-xs-12 section">
+				<div class="row">
+					<div class="col-md-12">
+						<figure><embed src="https://wakatime.com/share/@Ngamhaw/6750be4c-87bf-4850-b604-0b6b3a9416c1.svg"></embed>
+						</figure>
+					</div>
+				</div>
+				<div class="graph">
+				</div>
+			</div>
+			<div class="tm-content col-xl-6 offset-1 col-sm-12 col-xs-12 section">
 				<header class="mb-5">
 					<h1>I Gusti Nyoman Adi Wira Astina</h1>
 				</header>
-				<P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P>
-
-				<!-- <form action="#" method="get" class="subscribe-form">
-					<div class="row form-section">
-
-						<div class="col-md-7 col-sm-7 col-xs-7">
-							<input name="email" type="text" class="form-control" id="contact_email" placeholder="Your Email..."
-								required />
-						</div>
-						<div class="col-md-5 col-sm-5 col-xs-5">
-							<button type="submit" class="tm-btn-subscribe">Subscribe</button>
-						</div>
-
-					</div>
-				</form> -->
+				<!-- <P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P> -->
 
 				<div class="tm-social-icons-container text-xs-center">
-					<a href="https://www.facebook.com/AdiWiraAstina" class="tm-social-link"><i class="fa fa-facebook"></i></a>
-					<a href="https://www.instagram.com/wahmang_/" class="tm-social-link"><i class="fa fa-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/wahmang/" class="tm-social-link"><i class="fa fa-linkedin"></i></a>
+					<div class="row">
+						<div class="col-md-4">
+							<img src="img/gravatar.jpeg" alt="" style="border-radius: 100%;">
+						</div>
+						<div class="col-md-8 d-flex align-items-center">
+							<div class="social-media text-white">
+								<a href="https://www.facebook.com/AdiWiraAstina" class="tm-social-link"><i class="fa fa-facebook"></i></a>Adi Wira Astina<br>
+								<a href="https://www.instagram.com/wahmang_/" class="tm-social-link"><i class="fa fa-instagram"></i></a>Wahmang_<br>
+								<a href="https://www.linkedin.com/in/wahmang/" class="tm-social-link"><i class="fa fa-linkedin"></i></a>Wahmang<br>
+							</div>
+						</div>
+					</div>
 				</div>
 
 			</div>
