uncommand company name

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Template Re-distribution is NOT allowed.
 				<header class="mb-5">
 					<h1>I Gusti Nyoman Adi Wira Astina</h1>
 				</header>
-				<!-- <P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P> -->
+				<P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P>
 
 				<div class="tm-social-icons-container text-xs-center">
 					<div class="row">
