social link + new website

--- a/index.html
+++ b/index.html
@@ -59,18 +59,25 @@ Template Re-distribution is NOT allowed.
 				<header class="mb-5">
 					<h1>I Gusti Nyoman Adi Wira Astina</h1>
 				</header>
-				<P class="mb-5"><a href="https://awwbit.com">Awwbit Digital Agency</a></P>
 
 				<div class="tm-social-icons-container text-xs-center">
 					<div class="row">
-						<div class="col-md-4">
-							<img src="img/gravatar.jpeg" alt="" style="border-radius: 100%;">
+						<div class="col-md-4 d-flex align-items-center">
+							<div>
+								<img src="img/gravatar.jpeg" alt="" style="border-radius: 100%;">
+							</div>
 						</div>
 						<div class="col-md-8 d-flex align-items-center">
 							<div class="social-media text-white">
-								<a href="https://www.facebook.com/AdiWiraAstina" class="tm-social-link"><i class="fa fa-facebook"></i></a>Adi Wira Astina<br>
-								<a href="https://www.instagram.com/wahmang_/" class="tm-social-link"><i class="fa fa-instagram"></i></a>Wahmang_<br>
-								<a href="https://www.linkedin.com/in/wahmang/" class="tm-social-link"><i class="fa fa-linkedin"></i></a>Wahmang<br>
+								<a href="https://www.facebook.com/AdiWiraAstina" class="tm-social-link"><i
+										class="fa fa-facebook"></i></a>
+								<a href="https://www.facebook.com/AdiWiraAstina">Adi Wira Astina</a><br>
+								<a href="https://www.instagram.com/wahmang_/" class="tm-social-link"><i class="fa fa-instagram"></i></a>
+								<a href="https://www.instagram.com/wahmang_/">Wahmang_</a><br>
+								<a href="https://www.linkedin.com/in/wahmang/" class="tm-social-link"><i class="fa fa-linkedin"></i></a>
+								<a href="https://www.linkedin.com/in/wahmang/">Wahmang</a><br>
+								<a href="https://awwbit.com" class="tm-social-link"><i class="fa fa-globe"></i></a>
+								<a href="https://awwbit.com">Awwbit Digital Agency</a><br>
 							</div>
 						</div>
 					</div>
